// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Navigation/MenuLink active 1`] = `
<a
  class="css-oato19"
  href="http://google.com"
>
  Link
</a>
`;

exports[`Storyshots Components|Navigation/MenuLink default 1`] = `
<a
  class="css-1jhmhe9"
  href="http://google.com"
>
  Link
</a>
`;

exports[`Storyshots Components|Navigation/MenuLink with knobs 1`] = `
<div
  style="width:90px"
>
  <a
    class="css-oato19"
    href="/"
  >
    Menu link item
  </a>
</div>
`;
